--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,16 +1,7 @@
 pipeline {
-    agent {
-        docker {
-            image 'maven:3.8.7-openjdk-11' // Maven with OpenJDK 11, adjust as necessary
-            args '-v /root/.m2:/root/.m2'  // Optional: Share Maven local repository to cache dependencies
-        }
-    }
+   agent any
     stages {
-        stage('Check Docker') {
-            steps {
-                sh 'docker --version'
-            }
-        }
+        
         stage('Build') {
             steps {
                 sh 'mvn -B -DskipTests clean package'
